fix text align for chef content

--- a/content/styles/style.less
+++ b/content/styles/style.less
@@ -379,6 +379,7 @@ h2 {
       font-size: 16px;
       width: 614px;
       line-height: 20px;
+      text-align: left;
     }
   }
 
